--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"private": true,
 	"packageManager": "bun@1.2.20",
 	"scripts": {
+		"dev": "turbo dev",
+		"build": "turbo build",
+		"preview": "turbo preview",
+		"typecheck": "turbo typecheck",
 		"format": "prettier --write .",
 		"format:check": "prettier --check ."
 	},
