--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,7 @@
 		"@hono/vite-dev-server": "^0.20.1",
 		"@repo/logger": "workspace:*",
 		"@types/bun": "latest",
-		"vite": "^7.1.3"
+		"vite": "catalog:"
 	},
 	"peerDependencies": {
 		"typescript": "catalog:"
