--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
 	},
 	"devDependencies": {
 		"@lucide/svelte": "catalog:svelte",
-		"@repo/ui": "catalog:svelte",
+		"@repo/ui": "workspace:*",
 		"@sveltejs/adapter-node": "^5.3.1",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
