--- a/compose.yml
+++ b/compose.yml
@@ -1,24 +1,38 @@
-version: "3"
-
 services:
+    nginx:
+        container_name: nginx
+        restart: always
+        build:
+            context: .
+            dockerfile: ./apps/nginx/Dockerfile
+        ports:
+            - 48273:48273
+        networks:
+            - app_network
+        depends_on:
+            - web
+
     web:
         container_name: web
+        restart: always
         build:
             context: .
             dockerfile: ./apps/web/Dockerfile
-        restart: always
-        ports:
-            - 5173:5173
+        expose:
+            - 5173
         networks:
             - app_network
+        depends_on:
+            - api
+
     api:
         container_name: api
+        restart: always
         build:
             context: .
             dockerfile: ./apps/api/Dockerfile
-        restart: always
-        ports:
-            - 3000:3000
+        expose:
+            - 3000
         networks:
             - app_network
 
