--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -9,16 +9,17 @@ RUN turbo prune web --docker
 FROM base AS install
 RUN mkdir -p /temp/dev
 COPY --from=builder /app/out/json /temp/dev/
-RUN cd /temp/dev && bun install --frozen-lockfile
+RUN cd /temp/dev && bun install
 
 RUN mkdir -p /temp/prod
 COPY --from=builder /app/out/json /temp/prod/
-RUN cd /temp/prod && bun install --frozen-lockfile --production
+RUN cd /temp/prod && bun install --omit=dev
 
 
 FROM base AS prerelease
 COPY --from=install /temp/dev/node_modules node_modules
 COPY --from=builder /app/out/full/ .
+COPY --from=builder /app/out/bun.lock .
 RUN bun turbo build --filter=web...
 
 FROM base AS release
